// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ArtifactDetails Component > renders correctly 1`] = `
.emotion-0.two-columns.column-data {
  grid-template-columns: max-content minmax(auto, 650px);
  max-width: initial;
  row-gap: 8px;
}

.emotion-1 {
  margin: 0;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  line-height: 1.57;
  letter-spacing: 0.00714em;
}

.emotion-2.copy-to-clipboard svg {
  fill: rgba(0, 0, 0, 0.54);
}

.emotion-3 {
  margin: 0;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  letter-spacing: 0.01071em;
  display: -webkit-box;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-line-clamp: 5;
  -webkit-box-orient: vertical;
  word-break: break-word;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 100%;
  box-sizing: border-box;
  text-align: left;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
  border-bottom: 1px solid rgba(0, 0, 0, 0.12);
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
}

.emotion-6 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  min-width: 0;
  margin-top: 4px;
  margin-bottom: 4px;
}

.MuiTypography-root:where(.emotion-6 .MuiListItemText-primary) {
  display: block;
}

.MuiTypography-root:where(.emotion-6 .MuiListItemText-secondary) {
  display: block;
}

.emotion-7 {
  margin: 0;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  letter-spacing: 0.01071em;
}

.emotion-8 {
  margin: 0;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  letter-spacing: 0.01071em;
  color: rgba(0, 0, 0, 0.6);
}

.emotion-9 {
  display: block;
  white-space: pre-wrap;
}

.emotion-10 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 0;
  padding: 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  line-height: 1.75;
  letter-spacing: 0.02857em;
  text-transform: uppercase;
  min-width: 64px;
  padding: 6px 16px;
  border: 0;
  border-radius: 4px;
  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  padding: 6px 8px;
  color: var(--variant-textColor);
  background-color: var(--variant-textBg);
  --variant-textColor: #1976d2;
  --variant-outlinedColor: #1976d2;
  --variant-outlinedBorder: rgba(25, 118, 210, 0.5);
  --variant-containedColor: #fff;
  --variant-containedBg: #1976d2;
  padding: 4px 5px;
  font-size: 0.8125rem;
  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.emotion-10::-moz-focus-inner {
  border-style: none;
}

.emotion-10.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

@media print {
  .emotion-10 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.emotion-10:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-10.Mui-disabled {
  color: rgba(0, 0, 0, 0.26);
}

@media (hover: hover) {
  .emotion-10:hover {
    --variant-containedBg: #1565c0;
    --variant-textBg: rgba(25, 118, 210, 0.04);
    --variant-outlinedBorder: #1976d2;
    --variant-outlinedBg: rgba(25, 118, 210, 0.04);
  }
}

.emotion-10.MuiButton-loading {
  color: transparent;
}

.emotion-11 {
  display: inherit;
  margin-right: 8px;
  margin-left: -4px;
  margin-left: -2px;
}

.emotion-11>*:nth-of-type(1) {
  font-size: 18px;
}

.emotion-12 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  fill: currentColor;
  font-size: 1.5rem;
}

.emotion-19 {
  margin: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  border-width: 0;
  border-style: solid;
  border-color: rgba(0, 0, 0, 0.12);
  border-bottom-width: thin;
}

.emotion-30 {
  background-color: #fff;
  color: rgba(0, 0, 0, 0.87);
  -webkit-transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  box-shadow: var(--Paper-shadow);
  background-image: var(--Paper-overlay);
  position: relative;
  -webkit-transition: margin 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: margin 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  overflow-anchor: none;
  padding: 0 15px;
  margin-bottom: 30px;
}

.emotion-30::before {
  position: absolute;
  left: 0;
  top: -1px;
  right: 0;
  height: 1px;
  content: "";
  opacity: 1;
  background-color: rgba(0, 0, 0, 0.12);
  -webkit-transition: opacity 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: opacity 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.emotion-30:first-of-type::before {
  display: none;
}

.emotion-30.Mui-expanded::before {
  opacity: 0;
}

.emotion-30.Mui-expanded:first-of-type {
  margin-top: 0;
}

.emotion-30.Mui-expanded:last-of-type {
  margin-bottom: 0;
}

.emotion-30.Mui-expanded+.emotion-30.Mui-expanded::before {
  display: none;
}

.emotion-30.Mui-disabled {
  background-color: rgba(0, 0, 0, 0.12);
}

.emotion-30.Mui-expanded {
  margin: 16px 0;
}

.emotion-30.Mui-expanded {
  margin-bottom: 30px;
}

.emotion-31 {
  all: unset;
}

.emotion-32 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 0;
  padding: 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  min-height: 48px;
  padding: 0px 16px;
  -webkit-transition: min-height 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: min-height 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.emotion-32::-moz-focus-inner {
  border-style: none;
}

.emotion-32.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

@media print {
  .emotion-32 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.emotion-32.Mui-focusVisible {
  background-color: rgba(0, 0, 0, 0.12);
}

.emotion-32.Mui-disabled {
  opacity: 0.38;
}

.emotion-32:hover:not(.Mui-disabled) {
  cursor: pointer;
}

.emotion-32.Mui-expanded {
  min-height: 64px;
}

.emotion-33 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-align: start;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin: 12px 0;
  -webkit-transition: margin 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: margin 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.emotion-33.Mui-expanded {
  margin: 20px 0;
}

.emotion-34 {
  margin: 0;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.5;
  letter-spacing: 0.00938em;
}

.emotion-36 {
  height: 0;
  overflow: hidden;
  -webkit-transition: height 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: height 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  visibility: hidden;
}

.emotion-37 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
}

.emotion-38 {
  width: 100%;
}

.emotion-40 {
  padding: 8px 16px 16px;
}

.emotion-64 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 0;
  padding: 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  line-height: 1.75;
  letter-spacing: 0.02857em;
  text-transform: uppercase;
  min-width: 64px;
  padding: 6px 16px;
  border: 0;
  border-radius: 4px;
  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  padding: 5px 15px;
  border: 1px solid currentColor;
  border-color: var(--variant-outlinedBorder, currentColor);
  background-color: var(--variant-outlinedBg);
  color: var(--variant-outlinedColor);
  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.emotion-64::-moz-focus-inner {
  border-style: none;
}

.emotion-64.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

@media print {
  .emotion-64 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.emotion-64:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-64.Mui-disabled {
  color: rgba(0, 0, 0, 0.26);
}

.emotion-64.Mui-disabled {
  border: 1px solid rgba(0, 0, 0, 0.12);
}

.emotion-64.MuiButton-loading {
  color: transparent;
}

.emotion-65 {
  display: inherit;
  margin-right: 8px;
  margin-left: -4px;
}

.emotion-65>*:nth-of-type(1) {
  font-size: 20px;
}

.emotion-67 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 0;
  padding: 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  line-height: 1.75;
  letter-spacing: 0.02857em;
  text-transform: uppercase;
  min-width: 64px;
  padding: 6px 16px;
  border: 0;
  border-radius: 4px;
  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  padding: 5px 15px;
  border: 1px solid currentColor;
  border-color: var(--variant-outlinedBorder, currentColor);
  background-color: var(--variant-outlinedBg);
  color: var(--variant-outlinedColor);
  --variant-textColor: #d32f2f;
  --variant-outlinedColor: #d32f2f;
  --variant-outlinedBorder: rgba(211, 47, 47, 0.5);
  --variant-containedColor: #fff;
  --variant-containedBg: #d32f2f;
  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.emotion-67::-moz-focus-inner {
  border-style: none;
}

.emotion-67.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

@media print {
  .emotion-67 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.emotion-67:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-67.Mui-disabled {
  color: rgba(0, 0, 0, 0.26);
}

.emotion-67.Mui-disabled {
  border: 1px solid rgba(0, 0, 0, 0.12);
}

@media (hover: hover) {
  .emotion-67:hover {
    --variant-containedBg: #c62828;
    --variant-textBg: rgba(211, 47, 47, 0.04);
    --variant-outlinedBorder: #d32f2f;
    --variant-outlinedBg: rgba(211, 47, 47, 0.04);
  }
}

.emotion-67.MuiButton-loading {
  color: transparent;
}

<div>
  <div
    class="break-all two-columns emotion-0 column-data margin-bottom-small"
  >
    <h6
      class="MuiTypography-root MuiTypography-subtitle2 key emotion-1"
      style="white-space: nowrap;"
    >
      Description
    </h6>
    <div
      class="flexbox align-items-center  emotion-2"
    >
      <div
        class="MuiTypography-root MuiTypography-body2 emotion-3"
      >
        <div
          class="flexbox"
          style="align-items: end;"
        >
          <div
            class="full-width margin-right emotion-4"
          >
            <div
              class="MuiListItem-root attributes MuiListItem-dense MuiListItem-padding MuiListItem-divider emotion-5"
            >
              <div
                class="MuiListItemText-root MuiListItemText-dense emotion-6"
              >
                <span
                  class="MuiTypography-root MuiTypography-body2 MuiListItemText-primary emotion-7"
                />
                <div
                  class="MuiTypography-root MuiTypography-body2 MuiListItemText-secondary emotion-8"
                  title="text"
                >
                  <span
                    class="emotion-9"
                  >
                    text
                  </span>
                   
                </div>
              </div>
            </div>
          </div>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorPrimary emotion-10"
            style="padding: 5px;"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-icon MuiButton-startIcon MuiButton-iconSizeSmall emotion-11"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-12"
                data-testid="EditIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.996.996 0 0 0-1.41 0l-1.83 1.83 3.75 3.75z"
                />
              </svg>
            </span>
            Edit
          </button>
        </div>
      </div>
    </div>
    <h6
      class="MuiTypography-root MuiTypography-subtitle2 key emotion-1"
      style="white-space: nowrap;"
    >
      Signed
    </h6>
    <div
      class="flexbox align-items-center  emotion-2"
    >
      <div
        class="MuiTypography-root MuiTypography-body2 emotion-3"
      >
        <div
          class="flexbox align-items-center"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium red margin-right-x-small emotion-12"
            data-testid="GppBadOutlinedIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2 4 5v6.09c0 5.05 3.41 9.76 8 10.91 4.59-1.15 8-5.86 8-10.91V5zm6 9.09c0 4-2.55 7.7-6 8.83-3.45-1.13-6-4.82-6-8.83v-4.7l6-2.25 6 2.25zM9.91 8.5 8.5 9.91 10.59 12 8.5 14.09l1.41 1.41L12 13.42l2.09 2.08 1.41-1.41L13.42 12l2.08-2.09-1.41-1.41L12 10.59z"
            />
          </svg>
          <p
            class="MuiTypography-root MuiTypography-body2 emotion-7"
          >
            Unsigned
          </p>
        </div>
      </div>
    </div>
  </div>
  <h6
    class="MuiTypography-root MuiTypography-subtitle2 emotion-1"
  >
    Software versioning information
  </h6>
  <hr
    class="MuiDivider-root MuiDivider-fullWidth margin-top-small margin-bottom-small emotion-19"
  />
  <div
    class="break-all two-columns emotion-0 column-data margin-bottom-small"
  >
    <h6
      class="MuiTypography-root MuiTypography-subtitle2 key emotion-1"
      style="white-space: nowrap;"
    >
      Software filesystem
    </h6>
    <div
      class="flexbox align-items-center  emotion-2"
    >
      <div
        class="MuiTypography-root MuiTypography-body2 emotion-3"
        title="data-partition"
      >
        data-partition
      </div>
    </div>
    <h6
      class="MuiTypography-root MuiTypography-subtitle2 key emotion-1"
      style="white-space: nowrap;"
    >
      Software name
    </h6>
    <div
      class="flexbox align-items-center  emotion-2"
    >
      <div
        class="MuiTypography-root MuiTypography-body2 emotion-3"
        title="myapp"
      >
        myapp
      </div>
    </div>
    <h6
      class="MuiTypography-root MuiTypography-subtitle2 key emotion-1"
      style="white-space: nowrap;"
    >
      Software version
    </h6>
    <div
      class="flexbox align-items-center  emotion-2"
    >
      <div
        class="MuiTypography-root MuiTypography-body2 emotion-3"
        title="v2020.10"
      >
        v2020.10
      </div>
    </div>
  </div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation1 MuiAccordion-root MuiAccordion-gutters emotion-30"
    style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
  >
    <h3
      class="MuiAccordion-heading emotion-31"
    >
      <button
        aria-expanded="false"
        class="MuiButtonBase-root MuiAccordionSummary-root MuiAccordionSummary-gutters flexbox align-items-center emotion-32"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiAccordionSummary-content MuiAccordionSummary-contentGutters emotion-33"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 emotion-34"
          >
            Artifact contents
          </p>
          <div
            style="margin-left: auto;"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-12"
              data-testid="ExpandMoreIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
            </svg>
          </div>
        </span>
      </button>
    </h3>
    <div
      class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden emotion-36"
      style="min-height: 0px;"
    >
      <div
        class="MuiCollapse-wrapper MuiCollapse-vertical emotion-37"
      >
        <div
          class="MuiCollapse-wrapperInner MuiCollapse-vertical emotion-38"
        >
          <div
            class="MuiAccordion-region emotion-39"
            role="region"
          >
            <div
              class="MuiAccordionDetails-root emotion-40"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation1 MuiAccordion-root MuiAccordion-gutters emotion-30"
    style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
  >
    <h3
      class="MuiAccordion-heading emotion-31"
    >
      <button
        aria-expanded="false"
        class="MuiButtonBase-root MuiAccordionSummary-root MuiAccordionSummary-gutters flexbox align-items-center emotion-32"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiAccordionSummary-content MuiAccordionSummary-contentGutters emotion-33"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 emotion-34"
          >
            Provides and Depends
          </p>
          <div
            style="margin-left: auto;"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-12"
              data-testid="ExpandMoreIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
            </svg>
          </div>
        </span>
      </button>
    </h3>
    <div
      class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden emotion-36"
      style="min-height: 0px;"
    >
      <div
        class="MuiCollapse-wrapper MuiCollapse-vertical emotion-37"
      >
        <div
          class="MuiCollapse-wrapperInner MuiCollapse-vertical emotion-38"
        >
          <div
            class="MuiAccordion-region emotion-39"
            role="region"
          >
            <div
              class="MuiAccordionDetails-root emotion-40"
            >
              <div>
                <h6
                  class="MuiTypography-root MuiTypography-subtitle2 emotion-1"
                >
                  Provides
                </h6>
                <hr
                  class="MuiDivider-root MuiDivider-fullWidth margin-top-small margin-bottom-small emotion-19"
                />
                <div
                  class="break-all two-columns emotion-0 column-data "
                >
                  <h6
                    class="MuiTypography-root MuiTypography-subtitle2 key emotion-1"
                    style="white-space: nowrap;"
                  >
                    artifact_name
                  </h6>
                  <div
                    class="flexbox align-items-center  emotion-2"
                  >
                    <div
                      class="MuiTypography-root MuiTypography-body2 emotion-3"
                      title="myapp"
                    >
                      myapp
                    </div>
                  </div>
                  <h6
                    class="MuiTypography-root MuiTypography-subtitle2 key emotion-1"
                    style="white-space: nowrap;"
                  >
                    data-partition.myapp.version
                  </h6>
                  <div
                    class="flexbox align-items-center  emotion-2"
                  >
                    <div
                      class="MuiTypography-root MuiTypography-body2 emotion-3"
                      title="v2020.10"
                    >
                      v2020.10
                    </div>
                  </div>
                  <h6
                    class="MuiTypography-root MuiTypography-subtitle2 key emotion-1"
                    style="white-space: nowrap;"
                  >
                    list_of_fancy
                  </h6>
                  <div
                    class="flexbox align-items-center  emotion-2"
                  >
                    <div
                      class="MuiTypography-root MuiTypography-body2 emotion-3"
                      title="x172"
                    >
                      x172
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="two-columns margin-top-small"
    style="max-width: fit-content;"
  >
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedNeutral MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorNeutral Mui-disabled MuiButton-root MuiButton-outlined MuiButton-outlinedNeutral MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorNeutral emotion-64"
      disabled=""
      download="test.mender"
      tabindex="-1"
      target="_blank"
      type="button"
    >
      <span
        class="MuiButton-icon MuiButton-startIcon MuiButton-iconSizeMedium emotion-65"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-12"
          data-testid="SaveAltIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 12v7H5v-7H3v7c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2v-7zm-6 .67 2.59-2.58L17 11.5l-5 5-5-5 1.41-1.41L11 12.67V3h2z"
          />
        </svg>
      </span>
      Download Artifact
    </button>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedError MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorError MuiButton-root MuiButton-outlined MuiButton-outlinedError MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorError emotion-67"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-icon MuiButton-startIcon MuiButton-iconSizeMedium emotion-65"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium red auth emotion-12"
          data-testid="DeleteIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6zM19 4h-3.5l-1-1h-5l-1 1H5v2h14z"
          />
        </svg>
      </span>
      Remove this Artifact?
    </button>
  </div>
</div>
`;

exports[`ArtifactDetails Component > renders correctly without software 1`] = `
.emotion-0.two-columns.column-data {
  grid-template-columns: max-content minmax(auto, 650px);
  max-width: initial;
  row-gap: 8px;
}

.emotion-1 {
  margin: 0;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  line-height: 1.57;
  letter-spacing: 0.00714em;
}

.emotion-2.copy-to-clipboard svg {
  fill: rgba(0, 0, 0, 0.54);
}

.emotion-3 {
  margin: 0;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  letter-spacing: 0.01071em;
  display: -webkit-box;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-line-clamp: 5;
  -webkit-box-orient: vertical;
  word-break: break-word;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 100%;
  box-sizing: border-box;
  text-align: left;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-top: 4px;
  padding-bottom: 4px;
  border-bottom: 1px solid rgba(0, 0, 0, 0.12);
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
}

.emotion-6 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  min-width: 0;
  margin-top: 4px;
  margin-bottom: 4px;
}

.MuiTypography-root:where(.emotion-6 .MuiListItemText-primary) {
  display: block;
}

.MuiTypography-root:where(.emotion-6 .MuiListItemText-secondary) {
  display: block;
}

.emotion-7 {
  margin: 0;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  letter-spacing: 0.01071em;
}

.emotion-8 {
  margin: 0;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  letter-spacing: 0.01071em;
  color: rgba(0, 0, 0, 0.6);
}

.emotion-9 {
  display: block;
  white-space: pre-wrap;
}

.emotion-10 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 0;
  padding: 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  line-height: 1.75;
  letter-spacing: 0.02857em;
  text-transform: uppercase;
  min-width: 64px;
  padding: 6px 16px;
  border: 0;
  border-radius: 4px;
  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  padding: 6px 8px;
  color: var(--variant-textColor);
  background-color: var(--variant-textBg);
  --variant-textColor: #1976d2;
  --variant-outlinedColor: #1976d2;
  --variant-outlinedBorder: rgba(25, 118, 210, 0.5);
  --variant-containedColor: #fff;
  --variant-containedBg: #1976d2;
  padding: 4px 5px;
  font-size: 0.8125rem;
  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.emotion-10::-moz-focus-inner {
  border-style: none;
}

.emotion-10.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

@media print {
  .emotion-10 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.emotion-10:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-10.Mui-disabled {
  color: rgba(0, 0, 0, 0.26);
}

@media (hover: hover) {
  .emotion-10:hover {
    --variant-containedBg: #1565c0;
    --variant-textBg: rgba(25, 118, 210, 0.04);
    --variant-outlinedBorder: #1976d2;
    --variant-outlinedBg: rgba(25, 118, 210, 0.04);
  }
}

.emotion-10.MuiButton-loading {
  color: transparent;
}

.emotion-11 {
  display: inherit;
  margin-right: 8px;
  margin-left: -4px;
  margin-left: -2px;
}

.emotion-11>*:nth-of-type(1) {
  font-size: 18px;
}

.emotion-12 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  fill: currentColor;
  font-size: 1.5rem;
}

.emotion-18 {
  background-color: #fff;
  color: rgba(0, 0, 0, 0.87);
  -webkit-transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  box-shadow: var(--Paper-shadow);
  background-image: var(--Paper-overlay);
  position: relative;
  -webkit-transition: margin 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: margin 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  overflow-anchor: none;
  padding: 0 15px;
  margin-bottom: 30px;
}

.emotion-18::before {
  position: absolute;
  left: 0;
  top: -1px;
  right: 0;
  height: 1px;
  content: "";
  opacity: 1;
  background-color: rgba(0, 0, 0, 0.12);
  -webkit-transition: opacity 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: opacity 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.emotion-18:first-of-type::before {
  display: none;
}

.emotion-18.Mui-expanded::before {
  opacity: 0;
}

.emotion-18.Mui-expanded:first-of-type {
  margin-top: 0;
}

.emotion-18.Mui-expanded:last-of-type {
  margin-bottom: 0;
}

.emotion-18.Mui-expanded+.emotion-18.Mui-expanded::before {
  display: none;
}

.emotion-18.Mui-disabled {
  background-color: rgba(0, 0, 0, 0.12);
}

.emotion-18.Mui-expanded {
  margin: 16px 0;
}

.emotion-18.Mui-expanded {
  margin-bottom: 30px;
}

.emotion-19 {
  all: unset;
}

.emotion-20 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 0;
  padding: 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  min-height: 48px;
  padding: 0px 16px;
  -webkit-transition: min-height 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: min-height 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.emotion-20::-moz-focus-inner {
  border-style: none;
}

.emotion-20.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

@media print {
  .emotion-20 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.emotion-20.Mui-focusVisible {
  background-color: rgba(0, 0, 0, 0.12);
}

.emotion-20.Mui-disabled {
  opacity: 0.38;
}

.emotion-20:hover:not(.Mui-disabled) {
  cursor: pointer;
}

.emotion-20.Mui-expanded {
  min-height: 64px;
}

.emotion-21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-align: start;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin: 12px 0;
  -webkit-transition: margin 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: margin 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.emotion-21.Mui-expanded {
  margin: 20px 0;
}

.emotion-22 {
  margin: 0;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.5;
  letter-spacing: 0.00938em;
}

.emotion-24 {
  height: 0;
  overflow: hidden;
  -webkit-transition: height 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: height 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  visibility: hidden;
}

.emotion-25 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
}

.emotion-26 {
  width: 100%;
}

.emotion-28 {
  padding: 8px 16px 16px;
}

.emotion-35 {
  height: 0;
  overflow: hidden;
  -webkit-transition: height 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: height 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.emotion-41 {
  margin: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  border-width: 0;
  border-style: solid;
  border-color: rgba(0, 0, 0, 0.12);
  border-bottom-width: thin;
}

.emotion-46 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 0;
  padding: 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  line-height: 1.75;
  letter-spacing: 0.02857em;
  text-transform: uppercase;
  min-width: 64px;
  padding: 6px 16px;
  border: 0;
  border-radius: 4px;
  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  padding: 5px 15px;
  border: 1px solid currentColor;
  border-color: var(--variant-outlinedBorder, currentColor);
  background-color: var(--variant-outlinedBg);
  color: var(--variant-outlinedColor);
  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.emotion-46::-moz-focus-inner {
  border-style: none;
}

.emotion-46.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

@media print {
  .emotion-46 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.emotion-46:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-46.Mui-disabled {
  color: rgba(0, 0, 0, 0.26);
}

.emotion-46.Mui-disabled {
  border: 1px solid rgba(0, 0, 0, 0.12);
}

.emotion-46.MuiButton-loading {
  color: transparent;
}

.emotion-47 {
  display: inherit;
  margin-right: 8px;
  margin-left: -4px;
}

.emotion-47>*:nth-of-type(1) {
  font-size: 20px;
}

.emotion-49 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 0;
  padding: 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  line-height: 1.75;
  letter-spacing: 0.02857em;
  text-transform: uppercase;
  min-width: 64px;
  padding: 6px 16px;
  border: 0;
  border-radius: 4px;
  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  padding: 5px 15px;
  border: 1px solid currentColor;
  border-color: var(--variant-outlinedBorder, currentColor);
  background-color: var(--variant-outlinedBg);
  color: var(--variant-outlinedColor);
  --variant-textColor: #d32f2f;
  --variant-outlinedColor: #d32f2f;
  --variant-outlinedBorder: rgba(211, 47, 47, 0.5);
  --variant-containedColor: #fff;
  --variant-containedBg: #d32f2f;
  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.emotion-49::-moz-focus-inner {
  border-style: none;
}

.emotion-49.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

@media print {
  .emotion-49 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.emotion-49:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-49.Mui-disabled {
  color: rgba(0, 0, 0, 0.26);
}

.emotion-49.Mui-disabled {
  border: 1px solid rgba(0, 0, 0, 0.12);
}

@media (hover: hover) {
  .emotion-49:hover {
    --variant-containedBg: #c62828;
    --variant-textBg: rgba(211, 47, 47, 0.04);
    --variant-outlinedBorder: #d32f2f;
    --variant-outlinedBg: rgba(211, 47, 47, 0.04);
  }
}

.emotion-49.MuiButton-loading {
  color: transparent;
}

<div>
  <div
    class="break-all two-columns emotion-0 column-data margin-bottom-small"
  >
    <h6
      class="MuiTypography-root MuiTypography-subtitle2 key emotion-1"
      style="white-space: nowrap;"
    >
      Description
    </h6>
    <div
      class="flexbox align-items-center  emotion-2"
    >
      <div
        class="MuiTypography-root MuiTypography-body2 emotion-3"
      >
        <div
          class="flexbox"
          style="align-items: end;"
        >
          <div
            class="full-width margin-right emotion-4"
          >
            <div
              class="MuiListItem-root attributes MuiListItem-dense MuiListItem-padding MuiListItem-divider emotion-5"
            >
              <div
                class="MuiListItemText-root MuiListItemText-dense emotion-6"
              >
                <span
                  class="MuiTypography-root MuiTypography-body2 MuiListItemText-primary emotion-7"
                />
                <div
                  class="MuiTypography-root MuiTypography-body2 MuiListItemText-secondary emotion-8"
                  title="text"
                >
                  <span
                    class="emotion-9"
                  >
                    text
                  </span>
                   
                </div>
              </div>
            </div>
          </div>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorPrimary emotion-10"
            style="padding: 5px;"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-icon MuiButton-startIcon MuiButton-iconSizeSmall emotion-11"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-12"
                data-testid="EditIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.996.996 0 0 0-1.41 0l-1.83 1.83 3.75 3.75z"
                />
              </svg>
            </span>
            Edit
          </button>
        </div>
      </div>
    </div>
    <h6
      class="MuiTypography-root MuiTypography-subtitle2 key emotion-1"
      style="white-space: nowrap;"
    >
      Signed
    </h6>
    <div
      class="flexbox align-items-center  emotion-2"
    >
      <div
        class="MuiTypography-root MuiTypography-body2 emotion-3"
      >
        <div
          class="flexbox align-items-center"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium red margin-right-x-small emotion-12"
            data-testid="GppBadOutlinedIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2 4 5v6.09c0 5.05 3.41 9.76 8 10.91 4.59-1.15 8-5.86 8-10.91V5zm6 9.09c0 4-2.55 7.7-6 8.83-3.45-1.13-6-4.82-6-8.83v-4.7l6-2.25 6 2.25zM9.91 8.5 8.5 9.91 10.59 12 8.5 14.09l1.41 1.41L12 13.42l2.09 2.08 1.41-1.41L13.42 12l2.08-2.09-1.41-1.41L12 10.59z"
            />
          </svg>
          <p
            class="MuiTypography-root MuiTypography-body2 emotion-7"
          >
            Unsigned
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation1 MuiAccordion-root MuiAccordion-gutters emotion-18"
    style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
  >
    <h3
      class="MuiAccordion-heading emotion-19"
    >
      <button
        aria-expanded="false"
        class="MuiButtonBase-root MuiAccordionSummary-root MuiAccordionSummary-gutters flexbox align-items-center emotion-20"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiAccordionSummary-content MuiAccordionSummary-contentGutters emotion-21"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 emotion-22"
          >
            Artifact contents
          </p>
          <div
            style="margin-left: auto;"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-12"
              data-testid="ExpandMoreIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
            </svg>
          </div>
        </span>
      </button>
    </h3>
    <div
      class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden emotion-24"
      style="min-height: 0px;"
    >
      <div
        class="MuiCollapse-wrapper MuiCollapse-vertical emotion-25"
      >
        <div
          class="MuiCollapse-wrapperInner MuiCollapse-vertical emotion-26"
        >
          <div
            class="MuiAccordion-region emotion-27"
            role="region"
          >
            <div
              class="MuiAccordionDetails-root emotion-28"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation1 MuiAccordion-root Mui-expanded MuiAccordion-gutters emotion-18"
    style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
  >
    <h3
      class="MuiAccordion-heading emotion-19"
    >
      <button
        aria-expanded="true"
        class="MuiButtonBase-root MuiAccordionSummary-root Mui-expanded MuiAccordionSummary-gutters flexbox align-items-center emotion-20"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiAccordionSummary-content Mui-expanded MuiAccordionSummary-contentGutters emotion-21"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 emotion-22"
          >
            Provides and Depends
          </p>
          <div
            style="margin-left: auto;"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-12"
              data-testid="ExpandLessIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="m12 8-6 6 1.41 1.41L12 10.83l4.59 4.58L18 14z"
              />
            </svg>
          </div>
        </span>
      </button>
    </h3>
    <div
      class="MuiCollapse-root MuiCollapse-vertical emotion-35"
      style="min-height: 0px; height: 0px; transition-duration: 0ms;"
    >
      <div
        class="MuiCollapse-wrapper MuiCollapse-vertical emotion-25"
      >
        <div
          class="MuiCollapse-wrapperInner MuiCollapse-vertical emotion-26"
        >
          <div
            class="MuiAccordion-region emotion-27"
            role="region"
          >
            <div
              class="MuiAccordionDetails-root emotion-28"
            >
              <div>
                <h6
                  class="MuiTypography-root MuiTypography-subtitle2 emotion-1"
                >
                  Provides
                </h6>
                <hr
                  class="MuiDivider-root MuiDivider-fullWidth margin-top-small margin-bottom-small emotion-41"
                />
                <div
                  class="break-all two-columns emotion-0 column-data "
                >
                  <h6
                    class="MuiTypography-root MuiTypography-subtitle2 key emotion-1"
                    style="white-space: nowrap;"
                  >
                    list_of_fancy
                  </h6>
                  <div
                    class="flexbox align-items-center  emotion-2"
                  >
                    <div
                      class="MuiTypography-root MuiTypography-body2 emotion-3"
                      title="x172"
                    >
                      x172
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="two-columns margin-top-small"
    style="max-width: fit-content;"
  >
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedNeutral MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorNeutral Mui-disabled MuiButton-root MuiButton-outlined MuiButton-outlinedNeutral MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorNeutral emotion-46"
      disabled=""
      download="test.mender"
      tabindex="-1"
      target="_blank"
      type="button"
    >
      <span
        class="MuiButton-icon MuiButton-startIcon MuiButton-iconSizeMedium emotion-47"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-12"
          data-testid="SaveAltIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 12v7H5v-7H3v7c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2v-7zm-6 .67 2.59-2.58L17 11.5l-5 5-5-5 1.41-1.41L11 12.67V3h2z"
          />
        </svg>
      </span>
      Download Artifact
    </button>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedError MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorError MuiButton-root MuiButton-outlined MuiButton-outlinedError MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorError emotion-49"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-icon MuiButton-startIcon MuiButton-iconSizeMedium emotion-47"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium red auth emotion-12"
          data-testid="DeleteIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6zM19 4h-3.5l-1-1h-5l-1 1H5v2h14z"
          />
        </svg>
      </span>
      Remove this Artifact?
    </button>
  </div>
</div>
`;
